# bevygame

./: Cargo.toml
assets/: gamemap.ldtk
src/: camera.rs  main.rs  misc.rs  player.rs  setup.rs  wall_collision.rs
