[package]
name = "bevygame"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
#bevy-inspector-egui = "0.22.1"
#bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git" }
#bevy_ecs_ldtk = "0.9.0"
bevy_ecs_ldtk = { path = "../bevy_ecs_ldtk" }
bevy_rapier2d = "0.24.0"
